# C-C-Qt-course

./: OverDouble.c  overchar.c  overdouble.c
CopyTXT/: CopyTXT  CopyTXT.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
HOMEWORK11/: memory  memory.cpp
HOMEWORK14/: tictac  tictactoe.cpp
HOMEWORK4/: file.c  recursion.c
HOMEWORK5/: frequency  frequency.c  randchar  randchar.c  txt.txt
HOMEWORK6/: goto  goto.c  sizeof  sizeof.c
HOMEWORK7/: phonebook  phonebook.c  phonebook.txt
HOMEWORK8/: example.c  stack  stack.c  stack2.c
HOMEWORK9/: algo  algo.c
Tesseract/: CMakeLists.txt
loops/: ForWhileDW.c
sorting/: sorting.c
switchcase/: switch.c
